# RSSM

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml
config/: pinpad_rssm_v1.yaml  pinpad_rssm_v2.yaml  rope_rssm_v1.yaml  scripted_pinpad_v1.yaml  two_buttons_v1.yaml  two_buttons_v2.yaml
example/: __init__.py  callback.py  dataset.py  train.py  transform.py
example-config/: rope_koch_v1.yaml  rope_koch_v2.yaml  two_buttons_v2.yaml
example/config/: two_buttons_v1.yaml
scripts/: __init__.py  download.py  train.py
src/rssm/: __init__.py  callback.py  core.py  custom_types.py  dataset.py  networks.py  objective.py  state.py  transform.py
src/rssm/base/: __init__.py  callback.py  loss.py  module.py  network.py  state.py
src/rssm/dataset/: __init__.py  augmentation.py  datamodule.py
src/rssm/networks/: __init__.py  cnn.py  fc.py  v1.py  v2.py
src/rssm/utils/: __init__.py  callback.py  config.py  visualize.py
src/rssm/v1/: __init__.py  callback.py  module.py  network.py  representation.py  transition.py
src/rssm/v2/: __init__.py  callback.py  module.py  network.py  representation.py  transition.py
tests/: conftest.py  test__core.py  test__networks.py  test__objective.py  test__state.py
