[project]
name = "rssm"
version = "0.1.0"
description = "Reccurent State-Space Model"
dependencies = [
    "torch>=2.2.1",
    "lightning>=2.2.1",
    "wandb>=0.16.4",
    "torchrl>=0.3.1",
    "distribution-extension @ git+https://github.com/nomutin/distribution-extension.git",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.9.0",
    "ruff>=0.4.2",
    "kornia>=0.7.2",
    "imageio>=2.34.1",
    "moviepy>=1.0.3",
    "gdown>=5.1.0",
    "matplotlib>=3.8.4",
    "rich>=13.7.1",
    "einops>=0.8.0",
    "torchvision>=0.18.0",
    "jsonargparse[signatures]>=4.27.7",
    "cnn @ git+https://github.com/nomutin/CNN",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rssm"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY001",  # missing-copyright-notice
    "ISC001",  # single-line-implicit-string-concatenation
    "COM812",  # missing-comma-in-multiline
]
fixable = ["ALL"]
unfixable = []
exclude = [".git", ".ruff_cache", ".venv",]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["rssm"]

[tool.ruff.lint.per-file-ignores]
"src/rssm/core.py" = ["PLR0913"]
"src/rssm/networks/v1.py" = ["PLR0913"]
"src/rssm/networks/v2.py" = ["PLR0913"]
"src/rssm/dataset.py" = ["PLR0913"]
"src/rssm/callback.py" = ["SLF001"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
