[project]
name = "rssm"
version = "0.1.3"
description = "Reccurent State-Space Model"
dependencies = [
    "lightning>=2.2.1",
    "torchrl>=0.3.1",
    "distribution-extension @ git+https://github.com/nomutin/distribution-extension.git",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.9.0",
    "ruff>=0.4.2",
    "pytest-cov>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rssm"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.rye.scripts]
cov = "pytest -ra --cov=src --cov-report=term --cov-report=xml"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY001",  # missing-copyright-notice
    "ISC001",  # single-line-implicit-string-concatenation
    "COM812",  # missing-comma-in-multiline
]
fixable = ["ALL"]
unfixable = []
exclude = [".git", ".ruff_cache", ".venv",]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["rssm"]

[tool.ruff.lint.per-file-ignores]
"src/rssm/core.py" = ["PLR0913"]
"src/rssm/networks.py" = ["PLR0913"]
"example/dataset.py" = ["PLR0913"]
"example/callback.py" = ["SLF001"]
"tests/*.py" = ["S101"]
"tests/test__core.py" = ["PLR6301", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
