[project]
name = "rssm"
version = "0.1.5"
description = "Reccurent State-Space Model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightning[extra]>=2.4.0",
    "torchrl>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.2",
    "poethepoet>=0.29.0",
    "pydoclint>=0.5.9",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.8",
]
train = [
    "cnn",
    "distribution-extension",
    "gdown>=5.2.0",
    "torchvision>=0.19.1",
    "wandb[media]>=0.18.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
distribution-extension = { git = "https://github.com/nomutin/distribution-extension" }
cnn = { git = "https://github.com/nomutin/CNN.git" }

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["CPY001"]
fixable = ["ALL"]
unfixable = []
exclude = [".git", ".ruff_cache", ".venv",]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["rssm"]

[tool.ruff.lint.per-file-ignores]
"src/rssm/core.py" = ["PLR0913"]
"src/rssm/networks.py" = ["PLR0913"]
"example/dataset.py" = ["PLR0913"]
"tests/*.py" = ["S101", "DOC201"]
"tests/test__core.py" = ["PLR6301", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poe.tasks.train]
script = "lightning.pytorch.cli:LightningCLI(save_config_kwargs={'overwrite': True})"

[tool.pydoclint]
style = 'numpy'
exclude = '\.git|\.ruff_cache|\.mypy_cache|\.venv'
